[package]
name = "reopen"
# Also increase the version in src/lib html root attribute
version = "0.2.1"
authors = ["Michal 'vorner' Vaner <vorner@vorner.cz>"]
description = "File reopening utility"
documentation = "https://docs.rs/reopen"
repository = "https://github.com/vorner/reopen"
readme = "README.md"
keywords = ["reopen", "logging"]
categories = ["development-tools::debugging"]
license = "Apache-2.0/MIT"

[badges]
maintenance = { status = "actively-developed" }
travis-ci = { repository = "vorner/reopen" }
appveyor = { repository = "vorner/reopen" }

[target.'cfg(unix)'.dependencies]
arc-swap = "~0.1"
libc = "~0.2"

[dev-dependencies]
log = "~0.4"
simple-logging = "~2"
simple-signal = "~1"
version-sync = "~0.5"
