[package]
name = "reopen"
# Also increase the version in src/lib html root attribute
version = "0.3.0"
authors = ["Michal 'vorner' Vaner <vorner@vorner.cz>"]
description = "File reopening utility"
documentation = "https://docs.rs/reopen"
repository = "https://github.com/vorner/reopen"
readme = "README.md"
keywords = ["reopen", "logging"]
categories = ["development-tools::debugging"]
license = "Apache-2.0/MIT"
edition = "2018"

[features]
signals = ["signal-hook"]

[badges]
maintenance = { status = "actively-developed" }
travis-ci = { repository = "vorner/reopen" }
appveyor = { repository = "vorner/reopen" }

[dependencies]
libc = { version = "~0.2", optional = true }
signal-hook = { version = "~0.1", optional = true }

[dev-dependencies]
log = "~0.4"
simple-logging = "~2"
version-sync = "~0.9"

[package.metadata.docs.rs]
all-features = true
