[package]
name = "reopen"
# Also increase the version in src/lib html root attribute
version = "1.0.0"
authors = ["Michal 'vorner' Vaner <vorner@vorner.cz>"]
description = "File reopening utility"
documentation = "https://docs.rs/reopen"
repository = "https://github.com/vorner/reopen"
readme = "README.md"
keywords = ["reopen", "logging"]
categories = ["development-tools::debugging"]
license = "Apache-2.0/MIT"
edition = "2018"

[features]
signals = ["signal-hook"]

[badges]
# The API surface feels "complete", so no plans to add more. But if there's a
# good idea what needs added, I don't mind an issue or PR filed at the repo.
maintenance = { status = "passively-maintained" }
travis-ci = { repository = "vorner/reopen" }

[dependencies]
libc = { version = "~0.2", optional = true }
signal-hook = { version = "~0.1.9", optional = true }

[build-dependencies]
autocfg = "~1"

[dev-dependencies]
log = "~0.4"
simple-logging = "~2"
partial-io = "~0.3"
version-sync = "~0.9"

[package.metadata.docs.rs]
all-features = true
